--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev:chrome": "tsup --watch --env.target=chrome",
     "build:firefox": "tsup --env.target=firefox",
     "build:chrome": "tsup --env.target=chrome",
-    "pack:crx": "bash pack-crx.sh"
+    "pack:crx": "bash pack-crx.sh",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "jsonfile": "^6.1.0"
@@ -29,6 +31,7 @@
     "prettier": "^2.5.0",
     "ts-node": "^10.5.0",
     "tsup": "^5.11.13",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "vitest": "^0.9.3"
   }
 }
