--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "manifest:firefox": "NODE_ENV=firefox tsx src/manifest.ts",
     "manifest:chrome": "NODE_ENV=chrome tsx src/manifest.ts",
-    "dev:firefox": "tsup --watch --env.target=firefox",
-    "dev:chrome": "tsup --watch --env.target=chrome",
+    "dev:chrome": "chokidar 'src/**/*' -c 'rm -rf extension/chrome && pnpm run build:chrome' --initial",
+    "dev:firefox": "chokidar 'src/**/*' -c 'rm -rf extension/firefox && pnpm run build:firefox' --initial",
     "build:firefox": "tsup --env.target=firefox",
     "build:chrome": "tsup --env.target=chrome",
     "pack:crx": "bash pack-crx.sh",
@@ -26,6 +26,7 @@
     "@types/offscreencanvas": "^2019.6.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "chokidar-cli": "^3.0.0",
     "crx": "^5.0.1",
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
